feat: more routes, adaptive dark mode, App reorganization, bunch of awesome stuff

--- a/ui/components/NavBar/styles.css
+++ b/ui/components/NavBar/styles.css
@@ -1,2 +1,4 @@
 @import '@material/drawer/dist/mdc.drawer.css';
 @import '@material/list/dist/mdc.list.css';
+@import '@rmwc/list/collapsible-list.css';
+@import '@rmwc/icon/icon.css';
